# fastapi-clean-architecture

./: README.md  config.py  containers.py  context_vars.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
migrations/versions/: 2025_03_08_2233-02252b399661_add_user_table.py  2025_03_09_2241-7bb674828ab9_user_add_memo.py  2025_03_24_0027-0f729054b756_add_note_tag.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py  user_service_test.py
user/domain/: exceptions.py  user.py  user_test.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py  user_repo_test.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
